sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: ')' expected but $XMLSTART$< found.
		while(i+ecart <lrg)
                              ^AlgCombSort:25: error: illegal start of simple expression
	}
        ^